# market-surveillance

./: .gitignore  README.md  pyproject.toml
notebooks/: surveillance_dashboard.ipynb
src/market_surveillance/: __init__.py  data_generator.py  engine.py  main.py  ml_utils.py  persistence.py  surveillance_rules.py
src/market_surveillance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
